--- a/app/src/index.html
+++ b/app/src/index.html
@@ -9,6 +9,7 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
+  <button id='btn'>click me</button>
   <app-root></app-root>
 </body>
 </html>
